Swagger json change
