# main.go
@@ -2,24 +2,25 @@ package main
 
 import (
 	"fmt"
+	"os"
 
 	"github.com/gofiber/fiber/v2"
-	"github.com/gofiber/swagger"
-
 	"github.com/gofiber/fiber/v2/middleware/cors"
-
-	"github.com/meinhoongagan/appointment-app/db"
-
-	"github.com/meinhoongagan/appointment-app/routes"
-
+	"github.com/gofiber/swagger"
 	"github.com/meinhoongagan/appointment-app/cron"
+	"github.com/meinhoongagan/appointment-app/db"
+	"github.com/meinhoongagan/appointment-app/docs"
 
-	_ "github.com/meinhoongagan/appointment-app/docs"
+	// _ "github.com/meinhoongagan/appointment-app/docs"
 	"github.com/meinhoongagan/appointment-app/redis"
+	"github.com/meinhoongagan/appointment-app/routes"
 )
 
 func main() {
 	app := fiber.New()
+
+	// Configure Swagger based on environment
+	configureSwagger()
 	db.Init()
 	redis.InitRedis()
 
@@ -27,15 +28,17 @@ func main() {
 		AllowOrigins: "*",
 	}))
 
-	// Swagger docs at /swagger/index.html
 	// @title Appointment App API
 	// @version 1.0
 	// @description This is the API documentation for the Appointment App.
-	// @host localhost:8000
 	// @BasePath /
+	// @schemes http https
 	// @securityDefinitions.apikey BearerAuth
 	// @in header
 	// @name Authorization
+
+	// @host appointment-app-a395.onrender.com
+	// @x-servers [{"url": "https://appointment-app-a395.onrender.com", "description": "Production"}, {"url": "http://localhost:8000", "description": "Development"}]
 
 	app.Get("/swagger/*", swagger.HandlerDefault)
 
@@ -53,4 +56,14 @@ func main() {
 
 	app.Listen(":8000")
 	fmt.Println("Server started on port 8000")
+}
+
+func configureSwagger() {
+	if os.Getenv("ENV") == "production" || os.Getenv("RENDER") != "" {
+		docs.SwaggerInfo.Host = "appointment-app-a395.onrender.com"
+		docs.SwaggerInfo.Schemes = []string{"https"}
+	} else {
+		docs.SwaggerInfo.Host = "localhost:8000"
+		docs.SwaggerInfo.Schemes = []string{"http"}
+	}
 }
